@@ -21,6 +21,9 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
+* [mjr] Fix LIST-STATUS parsing when using wildcards (Bug #14937, mariusz.goch@spacja.com).
+* [mjr] Fix SORT and THREAD commands when UTF8=ACCEPT.
+* [mjr] Provide SASL PLAIN authentication as another user (Marco Favero &lt;m.faverof@gmail.com&gt;, PR #7).
 * [jan] Fix warning with PHP 7.3 (Eloy Lafuente (stronk7) &lt;stronk7@moodle.org&gt;, PR 6).
  </notes>
  <contents>
@@ -3458,6 +3461,9 @@
    <date>2018-06-24</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
+* [mjr] Fix LIST-STATUS parsing when using wildcards (Bug #14937, mariusz.goch@spacja.com).
+* [mjr] Fix SORT and THREAD commands when UTF8=ACCEPT.
+* [mjr] Provide SASL PLAIN authentication as another user (Marco Favero &lt;m.faverof@gmail.com&gt;, PR #7).
 * [jan] Fix warning with PHP 7.3 (Eloy Lafuente (stronk7) &lt;stronk7@moodle.org&gt;, PR 6).
    </notes>
   </release>
